--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Fasthand&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
@@ -20,13 +21,15 @@ section{
     position: relative;
     min-height: 100vh;
     padding: 10rem 9% 2rem;
+    background-color: #1C1E24;
 }
 .login {
-    background-image: url('/Asstes/login.jpg');
+    background-image: url('Asstes/login.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     overflow: hidden;
+    opacity: 95%;
 }
 #logo{
     position: absolute;
@@ -43,7 +46,10 @@ section{
     transform: translateY(-50%);
     z-index: 2;
     text-align: center;
-    color: #EA731E;
+    color: #E3833F;
+    stroke-width: 20;
+    stroke: #000000;
+
     font-family: 'Alkatra', cursive;
 }
 #text-one, #text-two{
